# Process this file with autoconf to produce a configure script.
AC_INIT(boo,0.0.1-1)
AC_CONFIG_HEADER(src/config.h)
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_SRCDIR(src)
AC_LANG(C)

INSTALL="./config/install-sh -c"

# Checks for programs.
# The order of compiles starts from ugly ones to work on rare operating systems
AC_PROG_CC
AC_PROG_MAKE_SET
AC_CHECK_PROG(AR,ar,ar,:)
AC_CHECK_PROG(LD,ld,ld,:)

AC_GNU_SOURCE

# Check for command-line stuff
AC_ARG_ENABLE(enable_debug,
	[  --enable-debug         don't optimise and compile with debug information (default: no)])

if test "$enable_debug" = "yes"; then
	CFLAGS="-Wall -Werror -O0 -g -DDEBUG"
	LDFLAGS="$LDFLAGS -g"
	BUILD_MODE="debug"
else
	CFLAGS="$CFLAGS -Wall -Werror -O3"
	BUILD_MODE="release"
fi

AC_PROG_MAKE_SET
AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(SUBDIRS)
AC_SUBST(TEST_SUBDIRS)
AC_SUBST(OUTPATH)
AC_SUBST(INSTALL)
AC_SUBST(OUTPUT_FILES)
AC_SUBST(exec_prefix)
AC_SUBST(prefix)
AC_SUBST(bindir)
AC_SUBST(etcdir)
AC_SUBST(startupdir)
AC_SUBST(mandir)
AC_SUBST(VERSION)
AC_SUBST(RELEASE)
AC_SUBST(LD)

AC_OUTPUT([
			Makefile
			src/Makefile
		  ] )
		 
echo 
echo boo build mode is: $BUILD_MODE
echo 
